<resources>
    <string name="app_name">Sofra</string>
    <string name="select_time">Choose Time</string>
    <string name="dismiss">Hide</string>
    <string name="ok">Yes</string>
    <string name="request_food">Order Food</string>
    <string name="sell_food">Sale Food</string>
    <string name="title_activity_restaurant__navigation_">Restaurant_Navigation_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="happy">happy</string>
    <string name="Decrease">-</string>
    <string name="Increase">+</string>
    <string name="no_offers">No offers available</string>
    <string name="Complaint">Complaint</string>
    <string name="enter_product_preparing_time">Please enter product preparation time</string>
    <string name="search_fav_restaurant">Find your favorite restaurant</string>
    <string name="opened">Open</string>
    <string name="no_internet">There is no internet connection</string>
    <string name="error">Something went wrong</string>
    <string name="no_restaurants">There are no restaurants</string>
    <string name="waiit">Please wait</string>
    <string name="choose_city">Choose a city</string>
    <string name="special_order">Special offer</string>
    <string name="login">Sign in</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="gorget_password">Forget your password ?</string>
    <string name="enter">Login</string>
    <string name="no_account">Don\'t have an account? Click</string>
    <string name="here">Here</string>
    <string name="enter_code">Please enter the code that was sent to you</string>
    <string name="code">The code</string>
    <string name="enter_new_password">Please enter your new password</string>
    <string name="send">Send</string>
    <string name="enter_your_email">Please enter your email</string>
    <string name="password_confirm">Confirm password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="pleasure_your_partener">Glad to know your feedback</string>
    <string name="add_comment">Add a comment or rating</string>
    <string name="state">Status</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="minimum">Minimum Charge</string>
    <string name="delivery_cost">Delivery Fee</string>
    <string name="in_love">in love</string>
    <string name="sad">sad</string>
    <string name="choose_review">Choose your rating</string>
    <string name="add">Add</string>
    <string name="add_your_comment_here">.. Add your comment here</string>
    <string name="my_requests">My Orders</string>
    <string name="offers">Offers</string>
    <string name="call_us">Contact Us</string>
    <string name="about_app">About Us</string>
    <string name="sign_out">Logout</string>
    <string name="more">More</string>
    <string name="new_offers">New Offers</string>
    <string name="get_it_now">Get it now</string>
    <string name="current_orders">Current Orders</string>
    <string name="old_orders">Old Orders</string>
    <string name="recieve">Receipt</string>
    <string name="refuse">Refusal</string>
    <string name="quantity">Quantity</string>
    <string name="choose_region">Select Region</string>
    <string name="address">Address</string>
    <string name="products">My products</string>
    <string name="price">Price</string>
    <string name="all_cities">All cities</string>
    <string name="select_city_2">Select City</string>
    <string name="add_coment">Add</string>
    <string name="contact_us">Contact Us</string>
    <string name="full_name">Full name</string>
    <string name="your_message">What is your message?</string>
    <string name="enter_your_message">Please enter the message text</string>
    <string name="enter_your_type">Please select the type of complaint</string>
    <string name="Suggestion">Suggestion</string>
    <string name="Enquiry">Inquiry</string>
    <string name="order_details">Order details</string>
    <string name="add_notes">Add your notes here</string>
    <string name="cash">Cash on receipt</string>
    <string name="online">Online payment</string>
    <string name="confirm">Confirmation</string>
    <string name="my_offers">Our Offers</string>
    <string name="Commission">Commission</string>
    <string name="applications">Requests submitted</string>
    <string name="accept">Acceptance</string>
    <string name="confirm_deliver">Confirm delivery</string>
    <string name="reject">Refusal</string>
    <string name="call">Call</string>
    <string name="order_complete">The request is complete</string>
    <string name="add_new_product">Product image</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product Description</string>
    <string name="preparing_time">Processing time for the product</string>
    <string name="correct_details">Enter product data correctly</string>
    <string name="add_new_offer">Add a new offer</string>
    <string name="log_out_title">Are you sure to exit</string>
    <string name="add_offer_image">Add offer Image</string>
    <string name="offer_name">Offer name</string>
    <string name="brief_description">Brief Description</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="adjust">Update</string>
    <string name="offer_image">Offer Image</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="continu">Follow</string>
    <string name="minimumOrder">Minimum order</string>
    <string name="delieveryCost">Delivery Charge</string>
    <string name="communication_details">Contact information</string>
    <string name="whatsapp">What\'s App</string>
    <string name="gallery_photo">Store Image</string>
    <string name="no_products">There are no products</string>
    <string name="no_comments">There are no comments</string>
    <string name="categories">Our Categories</string>
    <string name="commission_details">Please transfer 10% of the sold profit within a maximum period of one month, noting that all orders will be registered on your personal account</string>
    <string name="total_cost">Total</string>
    <string name="add_more">Add more</string>
    <string name="closed">Closed</string>
    <string name="comments">Comments and rating</string>
    <string name="special_price">Price in offer</string>
    <string name="make_sure">Check your data</string>
    <string name="enter_inf">Please enter your information</string>
    <string name="enter_email">Please enter your e-mail</string>
    <string name="passwordLengh">The phone number must consist of 11 numbers</string>
    <string name="enter_name">Please enter your username</string>
    <string name="enter_phone">Please enter the phone number</string>
    <string name="enter_password">Please enter the password</string>
    <string name="enter_password_conf">Please enter the password again</string>
    <string name="enter_address">Please enter the address</string>
    <string name="enter_city">Please select a city</string>
    <string name="enter_region">Please select a region</string>
    <string name="enter_product_image">Please select a product image</string>
    <string name="enter_product_description">Please enter product description</string>
    <string name="enter_product_price">Please enter the product price</string>
    <string name="enter_product_name">Please enter the product name</string>
    <string name="enter_offer_image">Enter the offer image</string>
    <string name="enter_offer_name">Enter the offer name</string>
    <string name="enter_offer_description">Enter offer description</string>
    <string name="enter_offer_price">Enter the offer price</string>
    <string name="enter_offer_start">Enter the offer start date</string>
    <string name="enter_offer_end">Enter the offer end date</string>
    <string name="Order_rejected">Order was rejected</string>
    <string name="offer_start_date">Offer start date</string>
    <string name="offer_end_date">Offer end date</string>
    <string name="offer_description">Offer description</string>
    <string name="offer_price">Price</string>
    <string name="enter_restaurant_image">Enter the image of the restaurant</string>
    <string name="invalid_Email">E-mail should be in this format example@example.com</string>
    <string name="phoneLengh">The phone number must consist of 11 numbers</string>
    <string name="whatsappLengh">The WhatsApp number must consist of 11 numbers</string>
    <string name="enterPasswordd">Please enter the password</string>
    <string name="enterPasswordAgain">Please enter the password again</string>
    <string name="invalid_confirm_password">Confirm password does not match</string>
    <string name="passwordWeak">Password is weak</string>
    <string name="enter_whatsapp_number">Please enter the restaurant\'s WhatsApp number</string>
    <string name="select_city">Please select a city</string>
    <string name="select_region">Please select a region</string>
    <string name="enter_minimum_charger">Please enter the minimum order</string>
    <string name="enter_delivery_cost">Please enter delivery fees</string>
    <string name="select_categories">Please choose categories</string>
    <string name="enter_restaurant_name">Please enter the name of the restaurant</string>
    <string name="no_notifications">There are no notifications</string>
    <string name="no_orders">There are no orders</string>
    <string name="my_categories">Our Categories</string>
    <string name="category_image">Category Image</string>
    <string name="category_name">Category Name</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">Confirm the new password</string>
    <string name="change">Change</string>
    <string name="edit">Update</string>
    <string name="edit_category">Update Category</string>
    <string name="Category_Name">Category Name</string>
    <string name="details">Details</string>
    <string name="offer_details">Offer Details</string>
    <string name="enter_newpassword">Please enter the new password</string>
    <string name="enter_old_password">Please enter your old password</string>
    <string name="old_password_wrong">Please enter your old password correctly</string>
    <string name="new_orders">New orders</string>
    <string name="delivery_time">Delivery time</string>
    <string name="enter_delivery_time">Please enter the delivery time</string>
    <string name="refuse_reson">What is the reason for the cancellation</string>
    <string name="add_reson_here">Please enter the reason for cancellation</string>
    <string name="Order_refused">The order is canceled</string>
    <string name="nothing">There is no</string>
    <string name="want_delet">Do you want to delete ??</string>
    <string name="just_now">Now</string>
    <string name="From">From</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minutes_ago">minutes</string>
    <string name="an_hour_ago">from hour</string>
    <string name="hours_ago">Hours</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days</string>
    <string name="login_please">Please sign in</string>
    <string name="paid">What has been paid:</string>
    <string name="restaurant_commessions">Restaurant commissions:</string>
    <string name="cancel">Cancellation</string>
    <string name="contact_us_et_name">Full Name</string>
    <string name="contact_us_r_btn_complaint">Complaint</string>
</resources>