<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.fragments.Change_Password_Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/Change_Password_Fragment_Linear_SubView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Change_Password_Fragment_Et_Old_Password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/grey_background_2"
                android:hint="@string/old_password"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/blackLight"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/Change_Password_Fragment_Et_New_Password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/grey_background_2"
                android:hint="@string/new_password"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/blackLight"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/Change_Password_Fragment_Et_Renter_Password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/grey_background_2"
                android:hint="@string/new_password_again"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/blackLight"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/Change_Password_Fragment_Btn_Change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_52sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_52sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/button_backgrond_red_redius"
                android:gravity="center"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>