<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth"
    tools:context=".ui.fragments.authCycle.New_Password_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbackground">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:id="@+id/Lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/New_Password_Fragment_Tv_EnterCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/enter_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/New_Password_Fragment_Et_TheCode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_below="@id/New_Password_Fragment_Tv_EnterCode"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:background="@drawable/white_background"
                    android:hint="@string/code"
                    android:inputType="number"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greydark" />

                <TextView
                    android:id="@+id/New_Password_Fragment_Tv_EnterNewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/New_Password_Fragment_Et_TheCode"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/enter_new_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/New_Password_Fragment_Et_NewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_below="@id/New_Password_Fragment_Tv_EnterNewPassword"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:background="@drawable/white_background"
                    android:hint="@string/password"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greydark" />

                <EditText
                    android:id="@+id/New_Password_Fragment_Et_NewPassword_Confirm"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_below="@id/New_Password_Fragment_Et_NewPassword"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:background="@drawable/white_background"
                    android:hint="@string/password_confirm"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greydark" />

                <Button
                    android:id="@+id/New_Password_Fragment_Btn_Send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/New_Password_Fragment_Et_NewPassword_Confirm"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:background="@drawable/button_backgrond_red_redius"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>


</RelativeLayout>