<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/Edit_Category_Fragment_Linear_SubView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/edit_category"
                android:textColor="@color/red"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/Edit_Category_Fragment_Iv_Category_Image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/Edit_Category_Fragment_Et_Category_Name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/grey_background_2"
                android:hint="@string/Category_Name"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/blackLight"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/Edit_Category_Fragment_Btn_Edit"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/button_backgrond_red_redius"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>